// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UploadPhoto renders default state and disables submit 1`] = `
<div>
  <div
    class="sc-dAbbOM"
  >
    <div
      class=""
    />
    <form>
      <div
        class="sc-aXZVf cQAMzK"
      >
        <div
          class="sc-gEvEes erWXnv"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          Загрузить фото
        </div>
      </div>
      <button
        class=""
        disabled=""
        style="--btn-bg: var(--text-muted);"
        type="submit"
      >
        Загрузить фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto shows error message when upload fails 1`] = `
<div>
  <div
    class="sc-dAbbOM"
  >
    <div
      class=""
    >
      Network error
    </div>
    <form>
      <div
        class="sc-aXZVf cQAMzK"
      >
        <div
          class="sc-gEvEes erWXnv"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-feUZmx dNUNAR"
      >
        <div
          class="sc-jlZhev ctYIiT"
        >
          <span
            aria-label="Выбрать"
            class="sc-cwHptO cZLwRr"
          >
            ☐
          </span>
          <div
            class="sc-jEACwF eUYEUs"
          >
            <div
              style="width: 100%; height: 100%; background: var(--input-disabled-color);"
            />
          </div>
          <div
            class="sc-cPiKLY fqxQWe"
          >
            <div
              class="sc-dLMFT hManvj"
            >
              <span>
                photo.jpg
              </span>
              <span
                class="sc-dhKdcy kLtifp"
              >
                <span>
                  .
                </span>
                <span>
                  .
                </span>
                <span>
                  .
                </span>
              </span>
            </div>
            <span
              class="sc-imWYAH leAWOW"
            >
              image/jpeg
               · 
              4 B
               · Canon M50
               · 01.01.2020, 03:00:00
               · 1.000000, 2.000000 · 3m
            </span>
          </div>
          <button
            aria-label="Удалить файл photo.jpg"
            class="sc-eDPEui dpcpQo"
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <div
        class="sc-fPXMVh fTtKti"
        style="--font-size-label: 0.78rem; --font-size-field-error: 0.72rem; --font-size-field-description: 0.8rem;"
      >
        <div
          class="sc-gFqAkO dsrjCY"
        >
          Редактирование (все 1)
        </div>
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
        <div
          class="sc-ikkxIz hNSMIe"
        >
          <div
            class=""
          >
            <label
              class=""
              for="«ru»-control"
            >
              Заголовок
            </label>
            <input
              class=""
              id="«ru»-control"
              placeholder="Нажмите enter сохранить значение"
              type="text"
              value=""
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«rv»-control"
            >
              Приоритет
            </label>
            <input
              class=""
              id="«rv»-control"
              placeholder="Нажмите enter сохранить значение"
              type="number"
              value="0"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r10»-control"
            >
              Страна
            </label>
            <div
              class=""
            >
              <div>
                <input
                  class=""
                  id="«r10»-control"
                  placeholder="Нажмите enter сохранить значение"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r12»-control"
            >
              Город
            </label>
            <div
              class=""
            >
              <div>
                <input
                  class=""
                  id="«r12»-control"
                  placeholder="Нажмите enter сохранить значение"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r14»-control"
            >
              Теги
            </label>
            <div
              class=""
            >
              <div>
                <input
                  class=""
                  id="«r14»-control"
                  placeholder="Нажмите enter сохранить значение"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r16»-control"
            >
              Доступ для пользователей
            </label>
            <div
              class=""
            >
              <div>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  class=""
                  id="«r16»-control"
                  placeholder="Нажмите enter сохранить значение"
                  role="combobox"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <button
        class=""
        style="--btn-bg: var(--accent); --btn-hover-bg: var(--accent-hover);"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;

exports[`UploadPhoto updates label and shows selected file 1`] = `
<div>
  <div
    class="sc-dAbbOM"
  >
    <div
      class=""
    />
    <form>
      <div
        class="sc-aXZVf cQAMzK"
      >
        <div
          class="sc-gEvEes erWXnv"
          data-disabled="false"
          role="presentation"
          tabindex="0"
        >
          <input
            accept="image/jpeg,.jpeg,.jpg,image/png,.png,image/gif,.gif,image/webp,.webp"
            multiple=""
            style="border: 0px; clip: rect(0px, 0px, 0px, 0px); clip-path: inset(50%); height: 1px; margin: 0px -1px -1px 0px; overflow: hidden; padding: 0px; position: absolute; width: 1px; white-space: nowrap;"
            tabindex="-1"
            type="file"
          />
          1 файл выбран
        </div>
      </div>
      <div
        class="sc-feUZmx dNUNAR"
      >
        <div
          class="sc-jlZhev ctYIiT"
        >
          <span
            aria-label="Выбрать"
            class="sc-cwHptO cZLwRr"
          >
            ☐
          </span>
          <div
            class="sc-jEACwF eUYEUs"
          >
            <div
              style="width: 100%; height: 100%; background: var(--input-disabled-color);"
            />
          </div>
          <div
            class="sc-cPiKLY fqxQWe"
          >
            <div
              class="sc-dLMFT hManvj"
            >
              <span>
                photo.jpg
              </span>
            </div>
            <span
              class="sc-imWYAH leAWOW"
            >
              image/jpeg
               · 
              4 B
               · Canon M50
               · 01.01.2020, 03:00:00
               · 1.000000, 2.000000 · 3m
            </span>
          </div>
          <button
            aria-label="Удалить файл photo.jpg"
            class="sc-eDPEui dpcpQo"
            type="button"
          >
            ×
          </button>
        </div>
      </div>
      <div
        class="sc-fPXMVh fTtKti"
        style="--font-size-label: 0.78rem; --font-size-field-error: 0.72rem; --font-size-field-description: 0.8rem;"
      >
        <div
          class="sc-gFqAkO dsrjCY"
        >
          Редактирование (все 1)
        </div>
        <label
          class=" "
        >
          <button
            aria-checked="false"
            class="undefined undefined"
            data-state="unchecked"
            role="checkbox"
            type="button"
            value="on"
          />
          <input
            aria-hidden="true"
            style="position: absolute; pointer-events: none; opacity: 0; margin: 0px; transform: translateX(-100%); width: 0px; height: 0px;"
            tabindex="-1"
            type="checkbox"
            value="on"
          />
          <span
            class="  "
            style="color: var(--text-color);"
          >
            Скрыть
          </span>
        </label>
        <div
          class="sc-ikkxIz hNSMIe"
        >
          <div
            class=""
          >
            <label
              class=""
              for="«r0»-control"
            >
              Заголовок
            </label>
            <input
              class=""
              id="«r0»-control"
              placeholder="Нажмите enter сохранить значение"
              type="text"
              value=""
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r1»-control"
            >
              Приоритет
            </label>
            <input
              class=""
              id="«r1»-control"
              placeholder="Нажмите enter сохранить значение"
              type="number"
              value="0"
            />
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r2»-control"
            >
              Страна
            </label>
            <div
              class=""
            >
              <div>
                <input
                  class=""
                  id="«r2»-control"
                  placeholder="Нажмите enter сохранить значение"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r4»-control"
            >
              Город
            </label>
            <div
              class=""
            >
              <div>
                <input
                  class=""
                  id="«r4»-control"
                  placeholder="Нажмите enter сохранить значение"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r6»-control"
            >
              Теги
            </label>
            <div
              class=""
            >
              <div>
                <input
                  class=""
                  id="«r6»-control"
                  placeholder="Нажмите enter сохранить значение"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
          <div
            class=""
          >
            <label
              class=""
              for="«r8»-control"
            >
              Доступ для пользователей
            </label>
            <div
              class=""
            >
              <div>
                <input
                  aria-autocomplete="list"
                  aria-expanded="false"
                  class=""
                  id="«r8»-control"
                  placeholder="Нажмите enter сохранить значение"
                  role="combobox"
                  type="text"
                  value=""
                />
              </div>
              <div
                class=""
              />
            </div>
          </div>
        </div>
      </div>
      <button
        class=""
        style="--btn-bg: var(--accent); --btn-hover-bg: var(--accent-hover);"
        type="submit"
      >
        Загрузить 1 фото
      </button>
    </form>
  </div>
</div>
`;
